changed all dates from 2015 to 2017 and corrected the workshop dates added the basic information of this years venue added sponsor oetiker added sponsor perl career linked the the created static docs about villars-sur-ollon   getting there   hotel / accommodation   what to do removed old files about hackathon and courses

--- a/actdocs/conf/act.ini
+++ b/actdocs/conf/act.ini
@@ -26,8 +26,8 @@ notify_accept = 1
 edition_open = 1
 show_schedule = 1
 durations = 10 20 40 
-start_date = 2017-08-26 08:00:00
-end_date   = 2017-08-29 23:00:00
+start_date = 2017-08-24 08:00:00
+end_date   = 2017-08-26 23:00:00
 levels = 4
 
 [levels]
@@ -37,12 +37,9 @@ level3_name_en = Intermediate
 level4_name_en = Advanced
 
 [rooms]
-rooms = r1 r2 r3 r4 r5
-r1_name_en = Salon
-r2_name_en = Bernstein
-r3_name_en = Flora
-r4_name_en = Rosa
-r5_name_en = Clara
+rooms = r1 r2 
+r1_name_en = Bouquetin
+r2_name_en = Chamois
 
 [payment]
 open        = 1
@@ -106,24 +103,6 @@ amount      = 500
 [product_sponsor_price3]
 name_en     = Gold Sponsor
 amount      = 1000
-
-# [product_course1]
-# name_en     = Intermediate Perl Course (4 days)
-# prices      = 1
-# 
-# [product_course1_price1]
-# name_en     = with brian d foy
-# amount      = 1600
-# 
-# [product_course2]
-# name_en     = Mastering Perl Course (2 days)
-# prices      = 1
-# 
-# [product_course2_price1]
-# name_en     = with brian d foy
-# amount      = 800
-
-
 
 # optional Flickr support
 [flickr]
