--- a/actdocs/conf/act.ini
+++ b/actdocs/conf/act.ini
@@ -25,7 +25,7 @@ submissions_notify_language = en
 notify_accept = 1
 edition_open = 1
 show_schedule = 1
-durations = 5 10 20 40 
+durations = 5 10 20 40 120
 start_date = 2017-08-24 08:00:00
 end_date   = 2017-08-26 23:00:00
 levels = 4
